# python-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  copier.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
template/: .gitignore  .pre-commit-config.yaml.jinja  Makefile.jinja  README.md.jinja  pyproject.toml.jinja
template/.github/: dependabot.yml.jinja
template/.github/workflows/: ci.yml.jinja
