[build-system]
requires = ["uv_build>=0.8.17,<0.11.0"]
build-backend = "uv_build"

[project]
name = "myproject"
version = "0.1.0"
description = "A Python project."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Author Name", email = "author@example.com" },
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py314"
line-length = 120

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=myproject",
    "--cov-report=term",
    "--cov-report=html:test_reports/coverage.html",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
